# Simple-ECS

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
example/: CMakeLists.txt  battle_system.cpp  battle_system.h  components.h  dummy_system.cpp  dummy_system.h  hp_system.cpp  hp_system.h  main.cpp
simple-ecs/: ECS.h  base_system.h  components.h  entity.h  entity_debug.cpp  entity_debug.h  entity_iterator.h  filter.h  observer.h  observer_manager.h  registrant.h  registry.h  serializer.cpp  serializer.h  storage.h  utils.h  world.cpp  world.h
simple-ecs/tools/: crc_ct.h  profiler.h  random.h  sparse_set.h  void_callback.h
